--- a/UI/TaiKhoan/FormThemTaiKhoan.form
+++ b/UI/TaiKhoan/FormThemTaiKhoan.form
@@ -167,11 +167,10 @@
         <Component class="javax.swing.JComboBox" name="cbCapNhatLoaiNV">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="Item 1"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
+              <StringArray count="3">
+                <StringItem index="0" value="Qu&#x1ea3;n l&#xfd;"/>
+                <StringItem index="1" value="Ghi danh"/>
+                <StringItem index="2" value="H&#x1ecd;c v&#x1ee5;"/>
               </StringArray>
             </Property>
           </Properties>
