--- a/UI/QuanLyNhanVien/UI_QuanlyNhanVien.form
+++ b/UI/QuanLyNhanVien/UI_QuanlyNhanVien.form
@@ -34,7 +34,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <Component id="paneChuongTrinh" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="38" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -105,6 +105,9 @@
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="text" type="java.lang.String" value="T&#xcc;M NH&#xc2;N VI&#xca;N"/>
           </Properties>
+          <AccessibilityProperties>
+            <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="T&#xcc;M NH&#xc2;N VI&#xca;N"/>
+          </AccessibilityProperties>
         </Component>
         <Component class="javax.swing.JTextField" name="textfeildTimTK">
           <Properties>
@@ -135,7 +138,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/images/them lop.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="T&#x1ea0;O T&#xc0;I KHO&#x1ea2;N M&#x1eda;I"/>
+            <Property name="text" type="java.lang.String" value="T&#x1ea0;O NH&#xc2;N VI&#xca;N M&#x1eda;I"/>
             <Property name="contentAreaFilled" type="boolean" value="false"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Hand Cursor"/>
