chức năng tìm kiếm khách hàng tự động reload Table. Thêm thông tin khách hàng vào lớp học vào db. Chưa kiểm tra chương trình học và điểm chuẩn.

--- a/UI/LopHocUI/ChiTietLopHoc/UI_ChiTietLop.form
+++ b/UI/LopHocUI/ChiTietLopHoc/UI_ChiTietLop.form
@@ -59,20 +59,17 @@
               </Group>
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="1" attributes="0">
-                          <Component id="btnCapNhatBangDiem" min="-2" pref="230" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
-                          <Component id="btnChuyenLop" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
-                          <Component id="btnXoaKhoiLop" min="-2" pref="167" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="1" attributes="0">
-                          <Component id="lblTenLop" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="549" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
+                  <Component id="btnCapNhatBangDiem" min="-2" pref="230" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
+                  <Component id="btnChuyenLop" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
+                  <Component id="btnXoaKhoiLop" min="-2" pref="167" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
+              </Group>
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="565" max="-2" attributes="0"/>
+                  <Component id="lblTenLop" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -284,6 +281,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="14" style="1"/>
             </Property>
+            <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="text" type="java.lang.String" value="L&#x1eda;P AV1 - 12343432"/>
           </Properties>
         </Component>
