--- a/UI/LopHocUI/ChiTietLopHoc/FormThemVaoLop.form
+++ b/UI/LopHocUI/ChiTietLopHoc/FormThemVaoLop.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Th&#xea;m V&#xe0;o L&#x1edb;p"/>
@@ -63,7 +63,7 @@
                   <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
-                          <Component id="btnXacNhan" min="-2" pref="150" max="-2" attributes="0"/>
+                          <Component id="btnXacNhanThem" min="-2" pref="150" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="349" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
@@ -87,7 +87,7 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="scThemVaoLop" min="-2" pref="200" max="-2" attributes="0"/>
                   <EmptySpace pref="10" max="32767" attributes="0"/>
-                  <Component id="btnXacNhan" min="-2" pref="49" max="-2" attributes="0"/>
+                  <Component id="btnXacNhanThem" min="-2" pref="49" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -132,8 +132,8 @@
                     <Column editable="false" title="H&#x1ecd; T&#xea;n" type="java.lang.String"/>
                     <Column editable="false" title="Gi&#x1edb;i T&#xed;nh" type="java.lang.String"/>
                     <Column editable="false" title="&#x110;i&#x1ec7;n Tho&#x1ea1;i" type="java.lang.String"/>
-                    <Column editable="true" title="&#x110;&#x1ecb;a Ch&#x1ec9;" type="java.lang.String"/>
-                    <Column editable="true" title="L&#x1edb;p Hi&#x1ec7;n T&#x1ea1;i" type="java.lang.Object"/>
+                    <Column editable="false" title="&#x110;&#x1ecb;a Ch&#x1ec9;" type="java.lang.String"/>
+                    <Column editable="false" title="L&#x1edb;p Hi&#x1ec7;n T&#x1ea1;i" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -170,7 +170,11 @@
                     </Column>
                   </TableColumnModel>
                 </Property>
+                <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[600, 400]"/>
+                </Property>
                 <Property name="rowHeight" type="int" value="30"/>
+                <Property name="selectionMode" type="int" value="0"/>
                 <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                 </Property>
@@ -178,7 +182,7 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JButton" name="btnXacNhan">
+        <Component class="javax.swing.JButton" name="btnXacNhanThem">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="d5" green="9b" red="5b" type="rgb"/>
@@ -201,7 +205,8 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnXacNhanActionPerformed"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnXacNhanThemMouseClicked"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnXacNhanThemActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
